--- a/static/style.css
+++ b/static/style.css
@@ -73,3 +73,12 @@ button {
     flex: 1;
     padding: 10px;
 }
+
+.itemImage{
+    padding: 20%;
+}
+
+.itemImage img{
+    width: 100%;
+    height: 100%;
+}
