--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,11 @@ button {
     width: 100%;
     height: 100%;
 }
+
+a.location{
+    color: inherit;
+}
+
+a.location:hover{
+    color: #369bf4;
+}
