--- a/templates/details.html
+++ b/templates/details.html
@@ -25,7 +25,7 @@
             <strong>Barcode:</strong> No barcode found
             {% endif %}
         </p>
-        <p><strong>Location:</strong> {% if detailedItem.parent %}<a href="{{ detailedItem.parent }}">{{ parent_name }}</a>{% endif %}</p>
+        <p><strong>Location:</strong> {% if detailedItem.parent %}<a class="location" href="{{ detailedItem.parent }}">{{ parent_name }}</a>{% else %} not assigned {% endif %}</p>
     </div>
     <div class="column">
         <h2>Ownership Details</h2>
