Refactor database schema and add photo upload functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <tr>
                 <th>Name</th>
                 <th>Barcode</th>
-                <th>Location</th>
+                <th>Location</th> <!-- Parent, to be deleted from showing -->
                 <th>Ownership</th>
                 <th>Creation date</th>
                 <th>Modify date</th>
