--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
                 <input type="text" id="name" name="name" required><br>
 
                 <label for="barcode">Barcode:</label>
-                <input type="text" id="barcode" name="barcode" required><br>
+                <input type="text" id="barcode" name="barcode"><br>
 
                 <label for="parent">Location:</label>
-                <input type="text" id="parent" name="parent" required><br>
+                <input type="text" id="parent" name="parent"><br>
 
                 <input type="submit" value="Add Item">
             </form>
