--- a/static/style.css
+++ b/static/style.css
@@ -80,7 +80,6 @@ button {
 
 .itemImage img{
     width: 100%;
-    height: 100%;
 }
 
 a.location{
@@ -89,4 +88,19 @@ a.location{
 
 a.location:hover{
     color: #369bf4;
+}
+
+.upload-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+}
+
+.upload-button:hover {
+    background-color: #45a049;
 }
