--- a/static/style.css
+++ b/static/style.css
@@ -60,8 +60,13 @@ button {
 .details-button {
     background-color: #369bf4;
 }
+
 .delete-button:hover {
     background-color: #d32f2f;
+}
+
+.details-button:hover {
+    background-color: #247cc9;
 }
 
 .details-container {
