--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,17 @@ table {
     width: 85vw;
     margin: 0 auto;
 }
+.rowlink::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: auto;
+    height: 55px;
+    z-index: 0;
+}
 th, td {
     padding: 8px;
     text-align: left;
@@ -16,6 +27,10 @@ th, td {
 th {
     background-color: #2e2e2e;
     color: white;
+}
+tr {
+    position: relative;
+    -webkit-transform: translateZ(0);
 }
 tr:nth-child(even) {
     background-color: #4d4c4a;
@@ -46,14 +61,18 @@ tr:nth-child(even) {
     background-color: #45a049;
 }
 
-table td.buttons{
+table .buttons{
+    position: relative;
     display: flex;
     gap: 10px;
     align-items: stretch;
     flex-direction: row;
+    justify-content: flex-end;
+    height: 100%;
+    z-index: 1;
 }
 
-table td.buttons .button {
+table .buttons .button {
     display: inline-block;
     padding: 10px 20px;
     color: #fff;
@@ -65,16 +84,25 @@ table td.buttons .button {
     text-align: center;
 }
 
-table td.buttons .button:hover {
+table .buttons .button:hover {
     background-color: #247cc9;
 }
 
-table td.buttons .delete-button {
+table .buttons .delete-button {
     background-color: #f44336;
 }
 
-table td.buttons .delete-button:hover {
+table .buttons .delete-button:hover {
     background-color: #d32f2f;
+}
+
+table .buttons .delete-child-button {
+    background-color: #d92c20;
+}
+
+table .buttons .delete-child-button:hover {
+    background-color: #b5261b;
+
 }
 
 .details-container {
@@ -92,7 +120,6 @@ table td.buttons .delete-button:hover {
         width: 80vw;
         align-items: stretch;
     }
-    
 }
 
 .details-container .details {
@@ -126,8 +153,7 @@ table td.buttons .delete-button:hover {
 }
 
 .details-container .itemImage .buttons .button {
-    display: inline-block;
-    padding: 10px 20px;
+    padding: 10px;
     color: #fff;
     cursor: pointer;
     border-radius: 5px;
@@ -202,7 +228,6 @@ div.search-container form{
     flex:2;
 
 }
-
 .buttons-container:last-child {
     justify-content: flex-end;
 }
@@ -214,7 +239,6 @@ div.search-container form{
     color: white;
     width: 40px;
     height: 40px;
-
     justify-content: center;
     align-items: center;
     display: flex;
